--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </li>
         
           <li>
-            <h2 >iPHONE SE</h2>
+            <h2 >iPAD</h2>
             <p >Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a> 
-            <img class="tels"  src="images/Ipad.png" />
+            <img class="ipad"  src="images/Ipad.png" />
         </li>
         
 <!--
