--- a/index.html
+++ b/index.html
@@ -13,54 +13,74 @@
 
 <body>
 
-    <script src="scripts/script.js"></script>
+
+
+
+
+    <header>
+
+        <nav>
+            <ul>
+                <li><a class="#"><img class="menulogo" src="images/Asset%201.png" alt=""></a></li>
+                <li><a href="index.html"><img class="applelogo"src="images/apple.png" alt=""></a></li>
+                <li id="shoppingbag"><img class="shoplogo" src="images/shoptas.jpg" alt=""></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <div class="bag">
+        <p class="emptyBag">Your bag is empty</p>
+        <div class="element">
+
+            <p class="dropdown"><a href="index2.html">Bag</a></p>
+        </div>
+        <div class="element">
+
+            <p>Favorites</p>
+        </div>
+        <div class="element">
+
+            <p>Order</p>
+        </div>
+
+
+    </div>
+
+    <main>
+        <!-- de lijst met foto's -->
+        <h1><b>Onze Stores zijn weer open. </b><br>Voor ieders veiligheid vragen we onze klanten om mondkapjes te dragen en laten we een beperkt aantal mensen tegelijk toe in onze winkels. Of shop online voor gratis, contactloze bezorging.</h1>
+
+        <ul>
+            <li id="section1">
+                <h2>iPHONE SE</h2>
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p>
+                <a href="">meer-informatie koop</a>
+                <img src="images/Iphone%20se.jpg" alt="view at Abel Tasman national Park" />
+            </li>
+
+
+            <li>
+                <h2>MEERDERE iPHONES</h2>
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a>
+                <img class="tels" src="images/iphones.png" alt="view at Abel Tasman national Park" />
+            </li>
+
+            <li>
+                <h2>iPAD</h2>
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a>
+                <img class="ipad" src="images/Ipad.png" /> </li>
+
+            <footer>
+
+                <li>
+                    <p class="footertkst">1. €&nbsp;4,99/maand na afloop van gratis proefperiode. Eén abonnement per ‘Delen met gezin’-groep. Aanbod geldig tot 3 maanden na activering van een in aanmerking komend device. Na afloop van de proefperiode wordt het abonnement automatisch verlengd totdat het wordt opgezegd. Er zijn beperkingen en andere </p>
+                </li>
+            </footer>
+
+        </ul>
+    </main>
+    <script type="text/javascript" src="scripts/script.js"></script>
 </body>
 
 </html>
-<header>
-
-    <nav>
-        <ul>
-            <li><a class="#"><img class="menulogo" src="images/Asset%201.png" alt=""></a></li>
-            <li><a href="index.html"><img class="applelogo"src="images/apple.png" alt=""></a></li>
-            <li><a href="index2.html"><img class="shoplogo"src="images/shoptas.jpg" alt=""></a></li>
-        </ul>
-    </nav>
-
-</header>
-
-
-
-<main>
-    <!-- de lijst met foto's -->
-    <h1><b>Onze Stores zijn weer open. </b><br>Voor ieders veiligheid vragen we onze klanten om mondkapjes te dragen en laten we een beperkt aantal mensen tegelijk toe in onze winkels. Of shop online voor gratis, contactloze bezorging.</h1>
-
-    <ul>
-        <li>
-            <h2>iPHONE SE</h2>
-            <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p>
-            <a href="">meer-informatie koop</a>
-            <img src="images/Iphone%20se.jpg" alt="view at Abel Tasman national Park" />
-        </li>
-
-
-        <li>
-            <h2>MEERDERE iPHONES</h2>
-            <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a>
-            <img class="tels" src="images/iphones.png" alt="view at Abel Tasman national Park" />
-        </li>
-
-        <li>
-            <h2>iPAD</h2>
-            <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a>
-            <img class="ipad" src="images/Ipad.png" /> </li>
-
-        <footer>
-
-            <li>
-                <p class="footertkst">1. €&nbsp;4,99/maand na afloop van gratis proefperiode. Eén abonnement per ‘Delen met gezin’-groep. Aanbod geldig tot 3 maanden na activering van een in aanmerking komend device. Na afloop van de proefperiode wordt het abonnement automatisch verlengd totdat het wordt opgezegd. Er zijn beperkingen en andere </p>
-            </li>
-        </footer>
-
-    </ul>
-</main>
