--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a class="#"><img class="menulogo" src="images/Asset%201.png" alt=""></a></li>
             <li><a href="index.html"><img class="applelogo"src="images/apple.png" alt=""></a></li>
-            <li><a href="index2.html"><img class="shoplogo"src="images/shoptas.jpg" alt=""></a></li>
+            <li id="shoppingbag"><img class="shoplogo" src="images/shoptas.jpg" alt=""></li>
         </ul>
     </nav>
 
@@ -35,11 +35,12 @@
     <!-- de lijst met foto's -->
     <h1>Je winkelmand is leeg.</h1>
     <p> Meld je aan om te zien of er artikelen voor je bewaard zijn. Of ga door met winkelen.</p>
-    <div class="buttonmain">   
-<button type="button" class="meld">Meld je aan      </button><button type="button" class="door">Ga door met winkelen</button>
-        </div>
+    <div class="buttonmain">
+        <button type="button" class="meld">Meld je aan      </button><button type="button" class="door">Ga door met winkelen</button>
+    </div>
 
-   
+
 </main>
-<section id="section-help">   
-<p>Need some help? <a href="">Chat now</a> or call <a href="">1-800-MY-APPLE</a></p></section>
+<section id="section-help">
+    <p>Need some help? <a href="">Chat now</a> or call <a href="">1-800-MY-APPLE</a></p>
+</section>
