--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
     <h1>Je winkelmand is leeg.</h1>
     <p> Meld je aan om te zien of er artikelen voor je bewaard zijn. Of ga door met winkelen.</p>
     <div class="buttonmain">
-        <button type="button" class="meld">Meld je aan      </button><button type="button" class="door">Ga door met winkelen</button>
+        <button type="button" id="meld">Meld je aan      </button><button type="button" id="door">Ga door met winkelen</button>
     </div>
 
 
@@ -44,3 +44,12 @@
 <section id="section-help">
     <p>Need some help? <a href="">Chat now</a> or call <a href="">1-800-MY-APPLE</a></p>
 </section>
+ <ul class="listContainer">
+            <li class="listItem">
+                <h2>Nieuw binnengekomen</h2>
+                <p>Bekijk de nieuwste accessoires</p>
+                <a href="">Shop</a>
+                
+            </li>
+            <img src="images/apple%20bag.jpeg" />
+            </ul>
