--- a/index.html
+++ b/index.html
@@ -55,20 +55,29 @@
             <li id="section1">
                 <h2>iPHONE SE</h2>
                 <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p>
-                <a href="">meer-informatie koop</a>
+                <div class="linkProduct">
+                    <a href="">meer-informatie</a>
+                    <a href="">koop</a>
+                </div>
                 <img src="images/Iphone%20se.jpg" alt="view at Abel Tasman national Park" />
             </li>
 
 
             <li>
                 <h2>MEERDERE iPHONES</h2>
-                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a>
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><div class="linkProduct">
+                    <a href="">meer-informatie</a>
+                    <a href="">koop</a>
+                </div>
                 <img class="tels" src="images/iphones.png" alt="view at Abel Tasman national Park" />
             </li>
 
             <li>
                 <h2>iPAD</h2>
-                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><a href="">meer-informatie koop</a>
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><div class="linkProduct">
+                    <a href="">meer-informatie</a>
+                    <a href="">koop</a>
+                </div>
                 <img class="ipad" src="images/Ipad.png" /> </li>
 
             <footer>
