--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 
 <body>
 
-
-
-
-
     <header>
 
         <nav>
@@ -65,7 +61,8 @@
 
             <li>
                 <h2>MEERDERE iPHONES</h2>
-                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><div class="linkProduct">
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p>
+                <div class="linkProduct">
                     <a href="">meer-informatie</a>
                     <a href="">koop</a>
                 </div>
@@ -74,7 +71,8 @@
 
             <li>
                 <h2>iPAD</h2>
-                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p><div class="linkProduct">
+                <p>Meer dan verwacht. <br> Voor minder dan je dacht. <br> Vanaf €489</p>
+                <div class="linkProduct">
                     <a href="">meer-informatie</a>
                     <a href="">koop</a>
                 </div>
