--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li id="shoppingbag"><img class="shoplogo" src="images/shoptas.jpg" alt=""></li>
             </ul>
         </nav>
+        <!--        mijn navigatie, hier voeg ik de plaatjes toe en link ik het apple logo met deze index.html-->
 
     </header>
 
@@ -39,12 +40,13 @@
 
             <p>Order</p>
         </div>
+        <!--        Code voor de dropdown menu, ik gebruik en menu omdat ik het dropdown menu zo beter kan stylen-->
 
 
     </div>
 
     <main>
-        <!-- de lijst met foto's -->
+        <!-- de lijst met producten -->
         <h1><b>Onze Stores zijn weer open. </b><br>Voor ieders veiligheid vragen we onze klanten om mondkapjes te dragen en laten we een beperkt aantal mensen tegelijk toe in onze winkels. Of shop online voor gratis, contactloze bezorging.</h1>
 
         <ul>
@@ -57,7 +59,7 @@
                 </div>
                 <img src="images/Iphone%20se.jpg" alt="view at Abel Tasman national Park" />
             </li>
-
+            <!--Dit zijn li's in ul met daarin de titel (h2) paragraaf (p) enter(br) linkjes (a) en afbeelding (img)-->
 
             <li>
                 <h2>MEERDERE iPHONES</h2>
@@ -81,10 +83,10 @@
             <footer>
 
                 <li>
-                    <p class="footertkst">1. €&nbsp;4,99/maand na afloop van gratis proefperiode. Eén abonnement per ‘Delen met gezin’-groep. Aanbod geldig tot 3 maanden na activering van een in aanmerking komend device. Na afloop van de proefperiode wordt het abonnement automatisch verlengd totdat het wordt opgezegd. Er zijn beperkingen en andere </p>
+                    <p>1. €;4,99/maand na afloop van gratis proefperiode. Eén abonnement per ‘Delen met gezin’-groep. Aanbod geldig tot 3 maanden na activering van een in aanmerking komend device. Na afloop van de proefperiode wordt het abonnement automatisch verlengd totdat het wordt opgezegd. Er zijn beperkingen en andere </p>
                 </li>
             </footer>
-
+            <!--          Footer bestaat puur uit tekst-->
         </ul>
     </main>
     <script type="text/javascript" src="scripts/script.js"></script>
