--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 
     <nav>
         <ul>
-            <li><a class="#"><img class="menulogo" src="images/Asset%201.png" alt=""></a></li>
+            <li><a><img class="menulogo" src="images/Asset%201.png" alt=""></a></li>
             <li><a href="index.html"><img class="applelogo"src="images/apple.png" alt=""></a></li>
             <li id="shoppingbag"><img class="shoplogo" src="images/shoptas.jpg" alt=""></li>
         </ul>
@@ -44,12 +44,12 @@
 <section id="section-help">
     <p>Need some help? <a href="">Chat now</a> or call <a href="">1-800-MY-APPLE</a></p>
 </section>
- <ul class="listContainer">
-            <li class="listItem">
-                <h2>Nieuw binnengekomen</h2>
-                <p>Bekijk de nieuwste accessoires</p>
-                <a href="">Shop</a>
-                
-            </li>
-            <img src="images/apple%20bag.jpeg" />
-            </ul>
+<ul class="listContainer">
+    <li class="listItem">
+        <h2>Nieuw binnengekomen</h2>
+        <p>Bekijk de nieuwste accessoires</p>
+        <a href="">Shop</a>
+
+    </li>
+    <img src="images/apple%20bag.jpeg" />
+</ul>
